--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "dayspan": "^1.1.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
+    "v-calendar": "^3.0.0-alpha.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0",
