--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "v-calendar": "^3.0.0-alpha.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.6",
+    "vue-toast-notification": "2.0",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "*"
   },
